<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Rozwój mowy dziecka\nQuiz z Rakiem Rerakiem"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAbout"
            style="@style/RoundedButton"
            android:backgroundTint="#6ce556"
            android:text="@string/o_aplikacji" />

        <Button
            android:id="@+id/btnStart"
            style="@style/RoundedButton"
            android:backgroundTint="#56cce5"
            android:text="@string/rozpocznij" />

        <Button
            android:id="@+id/btnEnd"
            style="@style/RoundedButton"
            android:backgroundTint="#56cce5"
            android:text="@string/zakoncz" />
    </LinearLayout>

    <ImageView
        android:id="@+id/rak"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLayout"
        app:layout_constraintLeft_toRightOf="@+id/rak"
        android:text="Witajcie!\nJestem Pan Rak Rerak"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="#FD6A02"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Studenci Logopedii 3 rok oraz\nstudenci Informatyki 4 rok"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>